[project]
name = "moe-grabber"
version = "0.1.0"
description = "萌备自动化抢号工具"
authors = [
    {name = "Hexzii", email = "hexzii@nichijou.moe"},
]
dependencies = [
    "requests>=2.32.5",
    "Pillow>=12.0.0",
    "lxml>=6.0.2",
    "protonmail-api-client>=2.4.3",
    "rapidocr>=3.4.5",
    "onnxruntime>=1.23.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "stamina>=26.1.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "GPLv3"}

[project.scripts]
moe-grabber = "moe_grabber.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/moe_grabber"]
